Clean-up of unused images and resource folder structure.

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="title">About Me</div>
                 <hr>
 
-                <img class="profile" alt="My natural habitat" src="resources/profile-2.jpg">
+                <img class="profile" alt="My natural habitat" src="resources/images/profile-2.jpg">
                 <p>My name is Chris Loewer and I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
             </div>
         </div>
@@ -56,24 +56,24 @@
 
                 <div class="column-container">
                     <div class="column">
-                        <img alt="Design" src="resources/design.svg" class="skill-icon">
+                        <img alt="Design" src="resources/icons/design.svg" class="skill-icon">
                         <h3>Web Design</h3>
                         <p>I help shape ideas into tangible designs that can be implemented.  Through multiple iterations of wireframes and mockups, I ensure my designs fit the original vision.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/web-design.svg" class="skill-icon">
+                        <img alt="Development" src="resources/icons/web-dev.svg" class="skill-icon">
                         <h3>Web Development</h3>
                         <p>I meticulously craft beautiful websites from the ground up.  I offer both CMS powered and completely custom sites depending on the degree of flexibility needed.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/programming.svg" class="skill-icon">
+                        <img alt="Development" src="resources/icons/programming.svg" class="skill-icon">
                         <h3>Custom Programming</h3>
                         <p>From web apps to desktop applications, I create custom software to meet specific needs of clients.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/cloud.svg" class="skill-icon">
+                        <img alt="Development" src="resources/icons/cloud.svg" class="skill-icon">
                         <h3>Data Solutions</h3>
-                        <p>From data mining to setting up database systems, I handle a wide range of information needs, arranging the results into a usable form.</p>
+                        <p>From data mining to establishing database systems, I handle a wide range of information needs, structuring the results into a usable form.</p>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/blog.jpg" alt="project"></a>
+                        <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/images/blog.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
@@ -98,7 +98,7 @@
 
                 <div class="project reverse">
                     <div class="thumb">
-                        <a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website"><img src="resources/ranch.jpg" alt="project"></a>
+                        <a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website"><img src="resources/images/ranch.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
@@ -110,7 +110,7 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics"><img src="resources/trello.jpg" alt="project"></a>
+                        <a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics"><img src="resources/images/trello.jpg" alt="project"></a>
                     </div>
                     <div class="description">
                         <h2><a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics">Trello Analytics Tool</a></h2>
@@ -129,31 +129,31 @@
                 <h2>Find Me Online</h2>
                 <div class="social-item">
                     <a href="#" class="link">
-                        <img src="resources/resume.svg" alt="LinkedIn" class="social-icon">
+                        <img src="resources/icons/resume.svg" alt="LinkedIn" class="social-icon">
                         Resume
                     </a>
                 </div>
                 <div class="social-item">
                     <a href="#" class="link">
-                        <img src="resources/mail.svg" alt="LinkedIn" class="social-icon">
+                        <img src="resources/icons/mail.svg" alt="LinkedIn" class="social-icon">
                         Email
                     </a>
                 </div>
                 <div class="social-item">
                     <a href="#" class="link">
-                        <img src="resources/linkedin.svg" alt="LinkedIn" class="social-icon">
+                        <img src="resources/icons/linkedin.svg" alt="LinkedIn" class="social-icon">
                         LinkedIn
                     </a>
                 </div>
                 <div class="social-item">
                     <a href="#" class="link">
-                        <img src="resources/github.svg" alt="LinkedIn" class="social-icon">
+                        <img src="resources/icons/github.svg" alt="LinkedIn" class="social-icon">
                         GitHub
                     </a>
                 </div>
                 <div class="social-item">
                     <a href="#" class="link">
-                        <img src="resources/twitter.svg" alt="LinkedIn" class="social-icon">
+                        <img src="resources/icons/twitter.svg" alt="LinkedIn" class="social-icon">
                         Twitter
                     </a>
                 </div>
