Add social links and revamp layout.  Remove now unused social icons.

--- a/index.html
+++ b/index.html
@@ -126,44 +126,36 @@
                 <div class="title">Connect</div>
                 <hr>
 
-                <h2>Find Me Online</h2>
-                <div class="social-item">
-                    <a href="#" class="link">
-                        <img src="resources/icons/resume.svg" alt="LinkedIn" class="social-icon">
-                        Resume
-                    </a>
-                </div>
-                <div class="social-item">
-                    <a href="#" class="link">
-                        <img src="resources/icons/mail.svg" alt="LinkedIn" class="social-icon">
-                        Email
-                    </a>
-                </div>
-                <div class="social-item">
-                    <a href="#" class="link">
-                        <img src="resources/icons/linkedin.svg" alt="LinkedIn" class="social-icon">
-                        LinkedIn
-                    </a>
-                </div>
-                <div class="social-item">
-                    <a href="#" class="link">
-                        <img src="resources/icons/github.svg" alt="LinkedIn" class="social-icon">
-                        GitHub
-                    </a>
-                </div>
-                <div class="social-item">
-                    <a href="#" class="link">
-                        <img src="resources/icons/twitter.svg" alt="LinkedIn" class="social-icon">
-                        Twitter
-                    </a>
-                </div>
-                <!-- TODO Add links -->
-
-                <hr>
-                <h2>Work With Me</h2>
                 <p>I am currently open to project proposals.  If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
 
+                <div class="spacer"></div>
+
+                <div class="social-column-container">
+                    <div class="social-column">
+                        <div class="social-item">
+                            <a href="mailto:chris.loewer@gmail.com" target="_blank">Email</a>
+                        </div>
+                        <div class="social-item">
+                            <a href="https://www.linkedin.com/in/chrisloewer/" target="_blank">LinkedIn</a>
+                        </div>
+                    </div>
+
+                    <div class="social-column vh"></div>
+
+                    <div class="social-column">
+                        <div class="social-item">
+                            <a href="https://github.com/chrisloewer" target="_blank">GitHub</a>
+                        </div>
+                        <div class="social-item">
+                            <a href="https://twitter.com/LoewerMeUp" target="_blank">Twitter</a>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </div>
+
+        <div class="footer">
+            Created by Chris Loewer - 2017
         </div>
     </div>
 
