Add brintic to project list and add github links.

--- a/index.html
+++ b/index.html
@@ -105,12 +105,13 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/images/blog.jpg" alt="project"></a>
+                        <a href="http://brintic.com" target="_blank" title="Brintic"><img src="resources/images/brintic.jpg" alt="Brintic CMS"></a>
+                        <a class="thumblink" href="https://github.com/chrisloewer/brintic" target="_blank">Github repo</a>
                     </div>
                     <div class="description">
-                        <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
-                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
+                        <h2><a href="http://brintic.com" target="_blank" title="Brintic">Brintic CMS</a></h2>
+                        <p>This is a custom content management system to help easily maintain websites I have created.  It provides an admin panel for users to log in and change the content on their website as shown in <a href="http://brintic.com/demo" target="_blank">this demo</a>. The front end is powered by Angular and hosted on an Ubuntu droplet.  The backend is using a serverless architecture based on AWS Lambda.</p>
+                        <p class="subtext">Angular 5 - HTML - SCSS - NodeJS - AWS - Lambda - DynamoDB - S3</p>
                     </div>
                 </div>
                 <hr>
@@ -118,6 +119,7 @@
                 <div class="project reverse">
                     <div class="thumb">
                         <a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website"><img src="resources/images/ranch.jpg" alt="project"></a>
+                        <a class="thumblink" href="https://github.com/chrisloewer/carter-land" target="_blank">Github repo</a>
                     </div>
                     <div class="description">
                         <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
@@ -129,14 +131,16 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics"><img src="resources/images/trello.jpg" alt="project"></a>
+                        <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/images/blog.jpg" alt="project"></a>
+                        <a class="thumblink" href="https://github.com/chrisloewer/blog-grav" target="_blank">Github repo</a>
                     </div>
                     <div class="description">
-                        <h2><a href="http://trello.chrisloewer.com/" target="_blank" title="Trello Analytics">Trello Analytics Tool</a></h2>
-                        <p>This tool allows users visualize their Trello metrics, viewing their individual activity as well as the total of their team.  The goal is to to provide additional analytics to Trello, allowing a way to quantify progress being made when using Trello as a task management system.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Handlebars</p>
+                        <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
+                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
+                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
                     </div>
                 </div>
+                <hr>
             </div>
         </div>
 
