Optimize img loading and update about me.

--- a/index.html
+++ b/index.html
@@ -60,11 +60,12 @@
 
         <div class="content-section vc-container center slant-separator">
             <div class="vc-content center">
-                <div class="title">About Me</div>
+                <div class="title">Who I Am</div>
                 <hr>
 
                 <img class="profile" alt="My natural habitat" src="resources/images/profile-2.jpg">
-                <p>My name is Chris Loewer and I became a web developer to exercise my creative expression in a way that has the power to unite people across the globe.  From Nairobi to Dallas to Seoul, I love the portability of web technology with its ability to impact mass audiences.</p>
+                <p>My name is Chris Loewer and I am a software engineer with a focus on web technologies. My current work primarily involves Node and various AWS services.</p>
+                <p>I'm come a long way from my humble beginnings of modding GBA ROMS and coding flash games, but the excitement of creating something new has always remained.</p>
             </div>
         </div>
 
