Update What I Do section.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <title>Chris Loewer</title>
 
     <!-- TODO Confirm only loaded fonts that are used -->
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:200i,300,300i,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
 
@@ -66,6 +66,7 @@
                 <img class="profile" alt="My natural habitat" src="resources/images/profile-2.jpg">
                 <p>My name is Chris Loewer and I am a software engineer with a focus on web technologies. My current work primarily involves Node and various AWS services.</p>
                 <p>I'm come a long way from my humble beginnings of modding GBA ROMS and coding flash games, but the excitement of creating something new has always remained.</p>
+                <p>Currently based out of Seattle.</p>
             </div>
         </div>
 
@@ -76,24 +77,24 @@
 
                 <div class="column-container">
                     <div class="column">
-                        <img alt="Design" src="resources/icons/design.svg" class="skill-icon">
-                        <h3>Web Design</h3>
-                        <p>I help shape ideas into tangible designs that can be implemented.  Through multiple iterations of wireframes and mockups, I ensure my designs fit the original vision.</p>
+                        <img alt="Development" src="resources/icons/programming.svg" class="skill-icon">
+                        <h3>Software Development</h3>
+                        <p>I build custom software solutions using a wide range of technologies to fit the need.</p>
                     </div>
                     <div class="column">
                         <img alt="Development" src="resources/icons/web-dev.svg" class="skill-icon">
-                        <h3>Web Development</h3>
-                        <p>I meticulously craft beautiful websites from the ground up.  I offer both CMS powered and completely custom sites depending on the degree of flexibility needed.</p>
+                        <h3>Websites</h3>
+                        <p>I meticulously craft websites from the ground up.  I offer a range of CMS and hosting solutions.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/icons/programming.svg" class="skill-icon">
-                        <h3>Custom Programming</h3>
-                        <p>From web apps to desktop applications, I create custom software to meet specific needs of clients.</p>
+                        <img alt="Design" src="resources/icons/design.svg" class="skill-icon">
+                        <h3>Design</h3>
+                        <p>I shape data and ideas into tangible designs that can be acted on and implemented.</p>
                     </div>
                     <div class="column">
                         <img alt="Development" src="resources/icons/cloud.svg" class="skill-icon">
                         <h3>Data Solutions</h3>
-                        <p>From data mining to establishing database systems, I handle a wide range of information needs, structuring the results into a usable form.</p>
+                        <p>I handle a wide range of information needs ranging from data mining to building database systems.</p>
                     </div>
                 </div>
             </div>
