Update Projects and link brintic demo on desktop.

--- a/index.html
+++ b/index.html
@@ -107,12 +107,15 @@
 
                 <div class="project">
                     <div class="thumb">
-                        <a href="http://brintic.com" target="_blank" title="Brintic"><img src="resources/images/brintic.jpg" alt="Brintic CMS"></a>
+                        <a href="https://brintic.com/demo" target="_blank" title="Brintic"><img src="resources/images/brintic.jpg" alt="Brintic CMS" class="desktop-only"></a>
+                        <a href="https://brintic.com" target="_blank" title="Brintic"><img src="resources/images/brintic.jpg" alt="Brintic CMS" class="mobile-only"></a>
                         <a class="thumblink" href="https://github.com/chrisloewer/brintic" target="_blank">Github repo</a>
                     </div>
                     <div class="description">
-                        <h2><a href="http://brintic.com" target="_blank" title="Brintic">Brintic CMS</a></h2>
-                        <p>This is a custom content management system to help easily maintain websites I have created.  It provides an admin panel for users to log in and change the content on their website as shown in <a href="http://brintic.com/demo" target="_blank">this demo</a>. The front end is powered by Angular and hosted on an Ubuntu droplet.  The backend is using a serverless architecture based on AWS Lambda.</p>
+                        <h2><a href="https://brintic.com/demo" target="_blank" title="Brintic" class="desktop-only">Brintic CMS</a></h2>
+                        <h2><a href="https://brintic.com" target="_blank" title="Brintic" class="mobile-only">Brintic CMS</a></h2>
+                        <p>This is a custom content management system to help easily maintain websites I have created.  It provides an admin panel for users to log in and change the content on their website as shown in <a href="http://brintic.com/demo" target="_blank" class="underline">this demo</a>.</p>
+                        <p>The front end is powered by Angular and hosted on an Ubuntu droplet. The backend uses serverless architecture based on various AWS services.</p>
                         <p class="subtext">Angular 5 - HTML - SCSS - NodeJS - AWS - Lambda - DynamoDB - S3</p>
                     </div>
                 </div>
@@ -125,7 +128,7 @@
                     </div>
                     <div class="description">
                         <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
-                        <p>This is a second iteration of a website intended to attract business for a local ranch broker. While I initially designed this website as a static site, it has recently been updated to include a CMS, allowing the business owner to add their own content.</p>
+                        <p>This is a second iteration of a website designed to attract business for a client's ranch brokerage. While I initially designed this website as a static site, it has been updated to include a CMS, allowing the business owners to add their own content.</p>
                         <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
                     </div>
                 </div>
@@ -138,7 +141,8 @@
                     </div>
                     <div class="description">
                         <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
-                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens.  It has been everything from a Ruby-based, mySql driven system to an open-source PHP content management system.  Currently it is running on Grav, a flat file CMS.</p>
+                        <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens. Currently it is running on Grav, a flat file CMS.</p>
+                        <p>I use it as a testing ground for new frameworks and it has been everything from a custom Ruby-based, mySql driven system to an open-source PHP CMS.</p>
                         <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
                     </div>
                 </div>
