Update contact section.

--- a/index.html
+++ b/index.html
@@ -152,10 +152,11 @@
 
         <div class="content-section vc-container center slant-separator alt-slant">
             <div class="vc-content center">
-                <div class="title">Connect</div>
+                <div class="title">Work With Me</div>
                 <hr>
 
-                <p>I am currently open to project proposals.  If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
+                <p>I am currently open to new opportunities.</p>
+                <p>If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
 
                 <div class="spacer"></div>
 
