Update title/description. Color tweaks.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    <!-- Favicons -->
     <link rel="icon" type="image/png" href="resources/icons/favicon/favicon.png">
     <link rel="apple-touch-icon" sizes="57x57" href="resources/icons/favicon/apple-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="resources/icons/favicon/apple-icon-60x60.png">
@@ -24,9 +25,11 @@
     <meta name="msapplication-TileImage" content="ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 
-    <title>Chris Loewer</title>
+    <!-- Title and Description -->
+    <title>Chris Loewer | Software Engineer</title>
+    <meta name="Description" content="A personal site for Chris Loewer, a Seattle-based software engineer with a focus on web technologies. Creator of Brintic CMS.">
 
-    <!-- TODO Confirm only loaded fonts that are used -->
+    <!-- External Assets -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Playfair+Display+SC:700,900" rel="stylesheet">
     <link rel="stylesheet" href="styles/index.css">
