Add social media meta tags

--- a/index.html
+++ b/index.html
@@ -44,7 +44,23 @@
 
     <!-- Title and Description -->
     <title>Chris Loewer | Software Engineer</title>
+    <meta name="title" content="Chris Loewer - Software Engineer">
     <meta name="Description" content="A personal site for Chris Loewer, a Seattle-based software engineer with a focus on web technologies. Creator of Brintic CMS.">
+
+    <!-- Social Meta Tags -->
+    <meta property="og:title" content="Chris Loewer | Software Engineer">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="Personal site for Chris Loewer, a Seattle-based software engineer.">
+    <meta property="og:url" content="http://chrisloewer.com">
+    <meta property="og:site_name" content="Chris Loewer">
+    <meta property="og:locale" content="English">
+    <meta property="og:image" content="https://i.imgur.com/RTT2VPV.jpg">
+    <meta name="twitter:card" content="Summary">
+    <meta name="twitter:site" content="loewermeup">
+    <meta name="twitter:title" content="Chris Loewer | Software Engineer">
+    <meta name="twitter:description" content="Personal site for Chris Loewer, a Seattle-based software engineer.">
+    <meta name="twitter:image" content="https://i.imgur.com/RTT2VPV.jpg">
+    <meta name="twitter:creator" content="loewermeup">
 
     <!-- External Assets -->
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700" rel="stylesheet">
