Minor content updates. Fix broken link.

--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <hr>
 
                 <img class="profile" alt="My natural habitat" src="resources/images/profile-2.jpg">
-                <p>My name is Chris Loewer and I am a software engineer with a focus on web technologies. My current work primarily involves Node and various AWS services.</p>
-                <p>I'm come a long way from my humble beginnings of modding GBA ROMS and coding flash games, but the excitement of creating something new has always remained.</p>
+                <p>My name is Chris Loewer and I am a software engineer with a focus on web technologies. My current work is primarily with Node and various AWS services.</p>
+                <p>I'm come a long way from my humble beginnings of modding GBA ROMS and building flash games, but the excitement of creating something new has always remained.</p>
                 <p>Currently based out of Seattle.</p>
             </div>
         </div>
@@ -155,7 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <div class="description">
                         <h2><a href="https://brintic.com/demo" target="_blank" title="Brintic" class="desktop-only">Brintic CMS</a></h2>
                         <h2><a href="https://brintic.com" target="_blank" title="Brintic" class="mobile-only">Brintic CMS</a></h2>
-                        <p>This is a custom content management system to help easily maintain websites I have created.  It provides an admin panel for users to log in and change the content on their website as shown in <a href="http://brintic.com/demo" target="_blank" class="underline">this demo</a>.</p>
+                        <p>This is a custom content management system to help easily maintain websites I have created.  It provides an admin panel for users to log in and change the content on their website as shown in <a href="https://brintic.com/demo" target="_blank" class="underline">this demo</a>.</p>
                         <p>The front end is powered by Angular and hosted on an Ubuntu droplet. The backend uses serverless architecture based on various AWS services.</p>
                         <p class="subtext">Angular 5 - HTML - SCSS - NodeJS - AWS - Lambda - DynamoDB - S3</p>
                     </div>
@@ -184,7 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <h2><a href="http://blog.chrisloewer.com" target="_blank" title="Blog">Personal Blog</a></h2>
                         <p>This is a frequently reworked blog where I experiment with exciting technologies and jot down what happens. Currently it is running on Grav, a flat file CMS.</p>
                         <p>I use it as a testing ground for new frameworks and it has been everything from a custom Ruby-based, mySql driven system to an open-source PHP CMS.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
+                        <p class="subtext">HTML - SCSS - Javascript - Grav - PHP - Twig - Ruby - SQLite - Handlebars</p>
                     </div>
                 </div>
                 <hr>
