--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <img class="profile" alt="My natural habitat" src="resources/images/profile-2.jpg">
                 <p>My name is Chris Loewer and I am a software engineer with a focus on web technologies. My current work is primarily with Node and various AWS services.</p>
                 <p>I'm come a long way from my humble beginnings of modding GBA ROMS and building flash games, but the excitement of creating something new has always remained.</p>
-                <p>Currently based out of Seattle.</p>
+                <p>Based out of Seattle.</p>
             </div>
         </div>
 
@@ -123,19 +123,19 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <p>I build custom software solutions using a wide range of technologies to fit the need.</p>
                     </div>
                     <div class="column">
-                        <img alt="Development" src="resources/icons/web-dev.svg" class="skill-icon">
+                        <img alt="Design" src="resources/icons/design.svg" class="skill-icon">
+                        <h3>Design</h3>
+                        <p>I transform data into tangible designs that expose unique, actionable business insights.</p>
+                    </div>
+                    <div class="column">
+                        <img alt="Web Development" src="resources/icons/web-dev.svg" class="skill-icon">
                         <h3>Websites</h3>
                         <p>I meticulously craft websites from the ground up.  I offer a range of CMS and hosting solutions.</p>
                     </div>
                     <div class="column">
-                        <img alt="Design" src="resources/icons/design.svg" class="skill-icon">
-                        <h3>Design</h3>
-                        <p>I shape data and ideas into tangible designs that can be acted on and implemented.</p>
-                    </div>
-                    <div class="column">
                         <img alt="Development" src="resources/icons/cloud.svg" class="skill-icon">
-                        <h3>Data Solutions</h3>
-                        <p>I handle a wide range of information needs ranging from data mining to building database systems.</p>
+                        <h3>Architecture</h3>
+                        <p>I design and implement applications with a serverless architecture powered by Amazon Web Services.</p>
                     </div>
                 </div>
             </div>
@@ -164,19 +164,6 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 <div class="project reverse">
                     <div class="thumb">
-                        <a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website"><img src="resources/images/ranch.jpg" alt="project"></a>
-                        <a class="thumblink" href="https://github.com/chrisloewer/carter-land" target="_blank">Github repo</a>
-                    </div>
-                    <div class="description">
-                        <h2><a href="http://carterranchbroker.com/" target="_blank" title="Ranch Broker Website">Ranch Brokerage Website</a></h2>
-                        <p>This is a second iteration of a website designed to attract business for a client's ranch brokerage. While I initially designed this website as a static site, it has been updated to include a CMS, allowing the business owners to add their own content.</p>
-                        <p class="subtext">HTML - CSS - Javascript - Grav - PHP - Twig</p>
-                    </div>
-                </div>
-                <hr>
-
-                <div class="project">
-                    <div class="thumb">
                         <a href="http://blog.chrisloewer.com" target="_blank" title="Blog"><img src="resources/images/blog.jpg" alt="project"></a>
                         <a class="thumblink" href="https://github.com/chrisloewer/blog-grav" target="_blank">Github repo</a>
                     </div>
@@ -196,8 +183,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 <div class="title">Work With Me</div>
                 <hr>
 
-                <p>I am currently open to new opportunities.</p>
-                <p>If you're passionate about an idea and need a developer to flesh it out, I'm your guy.  Shoot me an email with your elevator pitch and I'll see if I can help.</p>
+                <p>I am open to new opportunities.</p>
+                <p>If you have an exciting project and need an experienced engineer to join your team, let's get in touch.  Shoot me an email and we can see if we'd be a good fit.</p>
 
                 <div class="spacer"></div>
 
@@ -226,7 +213,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
 
         <div class="footer">
-            Created by Chris Loewer - 2020
+            Created by Chris Loewer - 2021
         </div>
     </div>
 
