Add flashing scroll icon.

--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </div>
 
+    <div class="scroll-indicator-container">
+        <div class="scroll-indicator">
+            <div class="scroll-indicator__icon"></div>
+        </div>
+    </div>
+
     <div class="bg-section">
     </div>
 
